--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "element-ui": "^2.11.1",
     "highlight.js": "^9.18.1",
+    "marked": "^1.1.1",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "vue": "^2.5.2",
