--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.1",
     "@nuxtjs/style-resources": "^1.0.0",
     "element-ui": "^2.13.2",
+    "highlight.js": "^10.1.2",
+    "moment": "^2.27.0",
+    "nprogress": "^0.2.0",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
