--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "",
+	"name": "路遥博客",
 	"appid": "",
 	"description": "",
 	"versionName": "1.0.0",
@@ -52,9 +52,15 @@
 	},
 	"quickapp": { /* 快应用特有相关 */
 
-	},
+  },
+  "h5": { /* h5特有相关 */
+    "title": "路遥博客",
+    "router": {
+      "mode": "history"
+    }
+  },
 	"mp-weixin": { /* 微信小程序特有相关 */
-		"appid": "",
+		"appid": "wx63aa59c843227edc",
 		"setting": {
 			"urlCheck": false
 		},
